@@ -11,6 +11,7 @@
 	</parent>
 
 	<artifactId>salary-restserver</artifactId>
+    <packaging>jar</packaging>
 
 	<dependencies>
 
@@ -78,6 +79,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                    @{jaCoCoArgLine} --add-opens salarychecker.restserver/salarychecker.restserver=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
             <!-- Checkstyle  -->
@@ -96,6 +102,9 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <propertyName>jaCoCoArgLine</propertyName>
+                </configuration>
             </plugin>
 
 			<!-- Spring-boot -->
